# sky-autoplay

./: .gitignore  README.md  README_zh.md  SkyMusicAutomation.spec  pyproject.toml
.github/workflows/: release.yml
assets/instruments/piano/: README.md
configs/: mapping.example.yaml  play.example.yaml
midis/: juebieshu2.mid  【FF14】Scream ～万魔殿パンデモニウム：煉獄編～ (单人演奏).mid
output/: chart.json  jojo.json  jue2.json  juebieshu.json
scripts/: render_piano_samples.py
src/: __init__.py
src/application/: ai_arranger.py  audio_engine.py  converter.py  player.py  prompt_store.py  updater.py
src/domain/: chart.py  mapping.py
src/infrastructure/: input_backends.py  midi_reader.py  repository.py
src/interfaces/: __init__.py
src/interfaces/cli/: main.py
src/interfaces/gui/: __init__.py  app.py  i18n.py  jianpu_compare_dialog.py  main_window.py  paths.py  play_overlay.py  prompt_editor_dialog.py  style.py
src/interfaces/gui/tabs/: convert_tab.py  mapping_tab.py  play_tab.py  preview_tab.py  simulate_tab.py  tracks_tab.py
src/interfaces/gui/widgets/: note_timeline.py  sky_keyboard.py  timeline_dialog.py
src/interfaces/gui/workers/: ai_worker.py  play_worker.py  sim_worker.py  update_worker.py
tests/: test_ai_arranger.py  test_converter.py  test_mapping.py  test_midi_reader.py  test_note_roles.py  test_player.py
