[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sky-music-automation"
version = "0.1.0"
description = "Sky music automation toolkit: MIDI to chart and chart playback"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mido>=1.3.2",
  "pydantic>=2.8.2",
  "pyyaml>=6.0.2",
  "typer>=0.12.5",
  "rich>=13.8.0",
]

[project.optional-dependencies]
input = [
  "pynput>=1.7.7",
]
gui = [
  "PySide6>=6.7.0",
]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.8",
]

[project.scripts]
skytool = "src.interfaces.cli.main:app"
skygui = "src.interfaces.gui.app:main"

[tool.setuptools]
packages = ["src", "src.domain", "src.application", "src.infrastructure", "src.interfaces", "src.interfaces.cli", "src.interfaces.gui", "src.interfaces.gui.tabs", "src.interfaces.gui.workers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
